tweak styling on mobile + bug fix

--- a/app/assets/stylesheets/styling.sass
+++ b/app/assets/stylesheets/styling.sass
@@ -635,7 +635,7 @@ ul.messages li, .player-card
   .wrapper
     width: 100%
     grid-template-areas: "topbar topbar" "canvas canvas" "palette palette" "players chat" "start-button round"
-    grid-template-rows: auto auto auto 500px auto
+    grid-template-rows: auto 275px auto 350px auto
     grid-template-columns: calc(50% - 0.125em) calc(50% - 0.125em)
     grid-gap: 0.25em
   .topbar
